add custom style

--- a/src/button.less
+++ b/src/button.less
@@ -1,3 +1,61 @@
 .bp-default-btn{
   .btn-default();
 }
+
+.ffan-btn-blue {
+  background: #32a7f3 !important;
+  &:hover {
+    background: #2d9ae1 !important;
+  }
+  &:active {
+    background: #0f85d2 !important;
+  }
+}
+
+.ffan-btn-green {
+  background: #00c9b8 !important;
+  &:hover {
+    background: #01b2a3 !important;
+  }
+  &:active {
+    background: #039b81 !important;
+  }
+}
+
+.ffan-btn-orange {
+  background: #ff7430 !important;
+  &:hover {
+    background: #ff7430 !important;
+  }
+  &:active {
+    background: #e35611 !important;
+  }
+}
+
+.ffan-btn-grey {
+  background: #e8ecf1 !important;
+  &:hover {
+    background: #d9e3ed !important;
+  }
+  &:active {
+    background: #cddae7 !important;
+  }
+}
+
+//form 样式
+.ffan-form-control {
+  border-radius: 0 !important;
+  border-color: #e3e5e7 !important;
+  &:focus {
+    border-color: #32a7f3 !important;
+  }
+}
+
+.ffan-form-control-input {
+  height: 36px !important;
+  border-radius: 0 !important;
+  border-color: #e3e5e7 !important;
+  &:focus {
+    border-color: #32a7f3 !important;
+  }
+}
