--- a/src/theme.less
+++ b/src/theme.less
@@ -1,3 +1,5 @@
 @import "../node_modules/bootstrap/less/bootstrap.less";
+@import "variables.less";
 @import "common.less";
 @import "button.less";
+@import "tables.less";
