--- a/src/theme.less
+++ b/src/theme.less
@@ -1,5 +1,8 @@
 @import "../node_modules/bootstrap/less/bootstrap.less";
 @import "variables.less";
+@import "header.less";
+@import "menu.less";
+@import "panels.less";
 @import "common.less";
 @import "button.less";
 @import "tables.less";
