--- a/src/variables.less
+++ b/src/variables.less
@@ -9,6 +9,9 @@
 // Font 其他的照旧
 @font-family-base: 'PingFang SC', "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-
-
 // ============== panel ==============
+
+@panel-header-bg-color:     @main-color;
+@panel-header-text-color:   #FFF;
+
+// ============== panel end ==============
