--- a/src/variables.less
+++ b/src/variables.less
@@ -6,7 +6,7 @@
 // 主色调, 按钮, panel的头, 一些文字都用这个颜色
 @main-color:     #06c5ac;
  
-// Font 其他的照旧
+// Font
 @font-family-base: 'PingFang SC', "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 // ============== panel ==============
@@ -15,3 +15,9 @@
 @panel-header-text-color:   #FFF;
 
 // ============== panel end ==============
+
+// ============== table ===============
+
+@ffan-table-bg-accent:               #f4f6f9;
+
+// ============== table end ===============
