--- a/src/variables.less
+++ b/src/variables.less
@@ -4,7 +4,9 @@
  
  
 // 主色调, 按钮, panel的头, 一些文字都用这个颜色
-@main-color:     #06c5ac;
+@main-color:                      #06c5ac;
+// 主容器, 乃侧边栏右边的容器, 此处定义他的背景色
+@main-content-container-bg-color: #EEEEEE;
  
 // Font
 @font-family-base: 'PingFang SC', "Helvetica Neue", Helvetica, Arial, sans-serif;
