--- a/src/theme.less
+++ b/src/theme.less
@@ -6,4 +6,5 @@
 @import "common.less";
 @import "button.less";
 @import "tables.less";
-@import "app.less";
+@import "layout.less";
+@import "pageTitle.less";
