--- a/src/layout.less
+++ b/src/layout.less
@@ -27,7 +27,7 @@
       right: 0;
       min-height: 100%;
       margin-left: 250px;
-      padding-bottom: 50px;
+      background-color: @main-content-container-bg-color;
   	}
   }
 }
