add modal and form

--- a/src/common.less
+++ b/src/common.less
@@ -9,3 +9,9 @@ html, body{
  
 // 表单必填星号的红色
 .required-star{color: red;}
+
+
+// 主要内容容器, 主要内容容器是指, 在menu右侧, page-title下方的容器
+.conter-wrapper{
+  padding: 15px;
+}
