--- a/src/variables.less
+++ b/src/variables.less
@@ -22,3 +22,15 @@
 @ffan-table-bg-accent:               #f4f6f9;
 
 // ============== table end ===============
+
+// ============== form ===============
+
+// 内阴影
+@form-element-inset-shadow-color: rgba(0,0,0,.075);
+// 外阴影
+@form-element-shadow-color: rgba(6,197,172,0.6);
+// ============== form end ===============
+
+// ============== modal ==================
+@modal-header-bg-color: @main-color;
+@modal-header-color: #FFF;
