--- a/src/panels.less
+++ b/src/panels.less
@@ -2,3 +2,14 @@
  * Panel 样式
  * @author fengpeng
  */
+ 
+.panel {
+  .bp-panel-primary {
+    border-color: @primary-color;
+    .panel-heading {
+      color: #ffffff;
+      background-color: @primary-color;
+      border-color: @primary-color;
+    }
+  }
+}
