replace main to primary

--- a/src/panels.less
+++ b/src/panels.less
@@ -10,6 +10,7 @@
       color: #ffffff;
       background-color: @primary-color;
       border-color: @primary-color;
+      .panel-title{}
     }
   }
 }
