--- a/src/variables.less
+++ b/src/variables.less
@@ -12,7 +12,7 @@
 
 // ============== panel ==============
 
-@panel-header-bg-color:     @main-color;
+@panel-header-bg-color:     @primary-color;
 @panel-header-text-color:   #FFF;
 
 // ============== panel end ==============
@@ -32,5 +32,5 @@
 // ============== form end ===============
 
 // ============== modal ==================
-@modal-header-bg-color: @main-color;
+@modal-header-bg-color: @primary-color;
 @modal-header-color: #FFF;
