--- a/src/form.less
+++ b/src/form.less
@@ -5,7 +5,7 @@
 // 覆盖了一部分bootstrap样式, 主要是颜色
 .form-control{
   &:focus{
-    border-color: @main-color;
+    border-color: @primary-color;
     outline: 0;
     box-shadow: inset 0 1px 1px @form-element-inset-shadow-color,0 0 8px @form-element-shadow-color;
   }
