--- a/src/button.less
+++ b/src/button.less
@@ -2,69 +2,69 @@
  * 按钮默认样式
  */
 .bp-btn-default {
-  color: #333333;
-  background-color: #ffffff;
-  border-color: #cccccc;
+  color: @btn-default-font-color;
+  background-color: @btn-font-color;
+  border-color: @btn-default-border-color;
   &:hover {
-    color: #333333;
-    background-color: #e6e6e6;
-    border-color: #adadad;
+    color: @btn-default-font-color;
+    background-color: @btn-default-hover-bg-color;
+    border-color: @btn-default-hover-border-color;
   }
 }
 .bp-btn-default[disabled] {
-  color: #333333;
-  background-color: #ffffff;
-  border-color: #cccccc;
+  color: @btn-default-font-color;
+  background-color: @btn-font-color;
+  border-color: @btn-default-border-color;
   &:hover {
-    color: #333333;
-    background-color: #ffffff;
-    border-color: #cccccc;
+    color: @btn-default-font-color;
+    background-color: @btn-font-color;
+    border-color: @btn-default-border-color;
   }
 }
 /**
  * 祖母绿的按钮
  */
 .bp-btn-primary {
-  color: #ffffff;
-  background-color: #06c5ac;
-  border-color: #06c5ac;
+  color: @btn-font-color;
+  background-color: @btn-primary-color;
+  border-color: @btn-primary-color;
   &:hover {
-    color: #ffffff;
-    background-color: #049481;
-    border-color: #037163;
+    color: @btn-font-color;
+    background-color: @btn-primary-hover-bg-color;
+    border-color: @btn-primary-hover-border-color;
   }
 }
 .bp-btn-primary[disabled] {
-  color: #ffffff;
-  background-color: #06c5ac;
-  border-color: #05ac96;
+  color: @btn-font-color;
+  background-color: @btn-primary-color;
+  border-color: @btn-primary-disabled-border-color;
   &:hover {
-    color: #ffffff;
-    background-color: #06c5ac;
-    border-color: #05ac96;
+    color: @btn-font-color;
+    background-color: @btn-primary-color;
+    border-color: @btn-primary-disabled-border-color;
   }
 }
 /**
  * 红色的按钮
  */
 .bp-btn-danger {
-  color: #ffffff;
-  background-color: #d57d6d;
-  border-color: #d57d6d;
+  color: @btn-font-color;
+  background-color: @btn-danger-color;
+  border-color: @btn-danger-color;
   &:hover {
-    color: #ffffff;
-    background-color: #ca5a45;
-    border-color: #b74935;
+    color: @btn-font-color;
+    background-color: @btn-danger-hover-bg-color;
+    border-color: @btn-danger-hover-border-color;
   }
 }
 .bp-btn-danger[disabled] {
-  color: #ffffff;
-  background-color: #d57d6d;
-  border-color: #cf6b59;
+  color: @btn-font-color;
+  background-color: @btn-danger-color;
+  border-color: @btn-danger-disabled-border-color;
   &:hover {
-    color: #ffffff;
-    background-color: #d57d6d;
-    border-color: #cf6b59;
+    color: @btn-font-color;
+    background-color: @btn-danger-color;
+    border-color: @btn-danger-disabled-border-color;
   }
 }
   
