--- a/src/variables.less
+++ b/src/variables.less
@@ -3,7 +3,26 @@
  */
 
 // 主色调, 按钮, panel的头, 一些文字都用这个颜色
-@primary-color:                   #06c5ac;
+@primary-color: #06c5ac;
+@danger-color: #d57d6d;
+
+// 按钮的颜色配置
+@btn-default-font-color: #333333;
+@btn-default-border-color: #cccccc;
+@btn-default-hover-border-color: #adadad;
+@btn-default-hover-bg-color: #e6e6e6;
+
+@btn-font-color: #ffffff;
+@btn-primary-color: @primary-color;
+@btn-primary-disabled-border-color: #05ac96;
+@btn-primary-hover-border-color: #037163;
+@btn-primary-hover-bg-color: #049481;
+
+@btn-danger-color: @danger-color;
+@btn-danger-disabled-border-color: #cf6b59;
+@btn-danger-hover-border-color: #b74935;
+@btn-danger-hover-bg-color: #ca5a45;
+
 // 主容器, 乃侧边栏右边的容器, 此处定义他的背景色
 @main-content-container-bg-color: #EEEEEE;
  
