--- a/src/variables.less
+++ b/src/variables.less
@@ -3,8 +3,8 @@
  */
 
 // 主色调, 按钮, panel的头, 一些文字都用这个颜色
-@primary-color: #06c5ac;
-@danger-color: #d57d6d;
+@primary-color:                 #06c5ac;
+@danger-color:                  #d57d6d;
 
 // 按钮的颜色配置
 @btn-default-font-color: #333333;
@@ -31,8 +31,11 @@
 
 // ============== panel ==============
 
+@panel-bg-color:            #FFF;
 @panel-header-bg-color:     @primary-color;
 @panel-header-text-color:   #FFF;
+@panel-header-title-weight: 300;
+@panel-padding: 20px;
 
 // ============== panel end ==============
 
