--- a/src/dropdown.less
+++ b/src/dropdown.less
@@ -1,5 +1,15 @@
 // 联想输入，背景颜色改变
 .dropdown-menu {
+  li {
+    a {
+      &:hover {
+        background-color: @primary-color;
+      }
+      &:focus {
+        background-color: @primary-color;      
+      }
+    }
+  }
   .active {
     a {
       background-image: none;
