--- a/src/modal.less
+++ b/src/modal.less
@@ -1,5 +1,9 @@
+/**
+ * @author fengpeng
+ */
 .modal-dialog{
   .modal-content{
+    border: 1px solid rgba(0,0,0,0.2);
     .modal-header{
       background-color: @modal-header-bg-color;
       color: @modal-header-color;
