--- a/src/panels.less
+++ b/src/panels.less
@@ -23,6 +23,10 @@
     .panel-body{
       padding: @panel-padding;
     }
+    .panel-footer{
+      background-color: @panel-footer-bg-color;
+      padding: 10px @panel-padding;
+    }
   }
   &.bp-panel-danger {
     .bp-panel-primary();
