--- a/src/panels.less
+++ b/src/panels.less
@@ -16,16 +16,19 @@
       border-bottom: none;
       border-top-right-radius: 4px;
       border-top-left-radius: 4px;
-      .panel-title{
+      .panel-title {
         font-weight: @panel-header-title-weight;
       }
     }
-    .panel-body{
+    .panel-body {
       padding: @panel-padding;
     }
-    .panel-footer{
+    .panel-footer {
       background-color: @panel-footer-bg-color;
       padding: 10px @panel-padding;
+    }
+    .panel-footer-btn-right {
+      text-align: right;
     }
   }
   &.bp-panel-danger {
