--- a/src/variables.less
+++ b/src/variables.less
@@ -4,7 +4,7 @@
  */
 
 // 主色调, 按钮, panel的头, 一些文字都用这个颜色
-@primary-color:                   #06c5ac;
+@primary-color:                   #58b4e9;
 @danger-color:                    #d57d6d;
 // 主容器, 乃侧边栏右边的容器, 此处定义他的背景色
 @main-content-container-bg-color: #EEEEEE;
@@ -14,7 +14,7 @@
 @basic-container-bg-color:        white;
 @basic-container-border-color:    #DDDDDD;
 @basic-container-border-radius:     5px;
-@basic-container-margin-bottom:     20px;
+@basic-container-margin-bottom:     15px;
 @basic-container-shadow-color:    rgba(0,0,0,0.05);
 // Font
 @font-family-base: 'PingFang SC', "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -27,13 +27,13 @@
 
 @btn-font-color: #ffffff;
 @btn-primary-color: @primary-color;
-@btn-primary-disabled-border-color: #05ac96;
-@btn-primary-hover-border-color: #037163;
-@btn-primary-hover-bg-color: #049481;
+// @btn-primary-disabled-border-color: #05ac96;
+// @btn-primary-hover-border-color: #037163;
+@btn-primary-hover-bg-color: #128ad0;
 
 @btn-danger-color: @danger-color;
-@btn-danger-disabled-border-color: #cf6b59;
-@btn-danger-hover-border-color: #b74935;
+// @btn-danger-disabled-border-color: #cf6b59;
+// @btn-danger-hover-border-color: #b74935;
 @btn-danger-hover-bg-color: #ca5a45;
 
 // panel
