--- a/src/dropdown.less
+++ b/src/dropdown.less
@@ -8,6 +8,7 @@
     a {
       &:hover {
         background-color: @primary-color;
+        color: #fff;
       }
       &:focus {
         background-color: @primary-color;      
@@ -21,6 +22,7 @@
       &:hover {
         background-image: none;
         background-color: @primary-color;
+        color: #fff;
       }
       &:focus {
         background-image: none;    
