--- a/src/panels.less
+++ b/src/panels.less
@@ -6,11 +6,12 @@
 .panel {
   border: none;
   border-radius: 5px;
+  margin-bottom: @basic-container-margin-bottom;
   &.bp-panel-primary {
     border-color: @panel-header-bg-color;
     .panel-heading {
       color: @panel-header-text-color;
-      padding: @panel-padding;
+      // padding: @panel-padding;
       background-color: @primary-color;
       border-color: @primary-color;
       border-bottom: none;
@@ -18,6 +19,7 @@
       border-top-left-radius: 4px;
       .panel-title {
         font-weight: @panel-header-title-weight;
+        font-size: 16px;
       }
     }
     .panel-body {
