--- a/src/variables.less
+++ b/src/variables.less
@@ -54,7 +54,7 @@
 // 内阴影
 @form-element-inset-shadow-color:   rgba(0,0,0,.075);
 // 外阴影
-@form-element-shadow-color:         rgba(6,197,172,0.6);
+@form-element-shadow-color:         @primary-color;
 
 // modal
 @modal-header-bg-color:               @primary-color;
