--- a/src/button.less
+++ b/src/button.less
@@ -57,6 +57,9 @@
     background-color: @btn-danger-hover-bg-color;
     // border-color: @btn-danger-hover-border-color;
   }
+  &:focus {
+    outline: 5px auto @btn-danger-color;
+  }
 }
 .bp-btn-danger[disabled] {
   color: @btn-font-color;
