--- a/src/dropdown.less
+++ b/src/dropdown.less
@@ -8,7 +8,7 @@
     a {
       &:hover {
         background-color: @primary-color;
-        color: #fff;
+        color: @dropdown-hover-font-color;
       }
       &:focus {
         background-color: @primary-color;      
@@ -22,7 +22,7 @@
       &:hover {
         background-image: none;
         background-color: @primary-color;
-        color: #fff;
+        color: @dropdown-hover-font-color;
       }
       &:focus {
         background-image: none;    
