--- a/src/form.less
+++ b/src/form.less
@@ -14,7 +14,7 @@
 
 select.form-control{
   option:hover {
-      color: white;
+      color: @form-select-hover-font-color;
       background-color: @primary-color;
   }
 }
