--- a/src/pageTitle.less
+++ b/src/pageTitle.less
@@ -5,10 +5,10 @@
  
  // 页头容器
  .page-title{
-   background: #fff;
-   border-bottom: solid 1px #ddd;
+   background: @page-title-bg-color;
+   border-bottom: solid 1px @page-title-border-color;
    padding: 15px;
-   color: #464646;
+   color: @page-title-font-color;
    // 标题
    h1{
      font-size: 18px;
