--- a/src/common.less
+++ b/src/common.less
@@ -8,7 +8,7 @@ html, body{
 }
  
 // 表单必填星号的红色
-.required-star{color: red;}
+.required-star{color: @form-required-star-color;}
 
 // 主要内容容器, 主要内容容器是指, 在menu右侧, page-title下方的容器
 .conter-wrapper{
