--- a/src/modal.less
+++ b/src/modal.less
@@ -3,7 +3,7 @@
  */
 .modal-dialog{
   .modal-content{
-    border: 1px solid rgba(0,0,0,0.2);
+    border: 1px solid @modal-content-border-color;
     .modal-header{
       padding: 10px;
       background-color: @modal-header-bg-color;
