--- a/src/tables.less
+++ b/src/tables.less
@@ -2,7 +2,7 @@
   tbody {
     tr {
       &:hover {
-        background-color: #f1f1f1;
+        background-color: @table-hover-bg-color;
       }
     }
   }
