样式调整和增加

--- a/src/button.less
+++ b/src/button.less
@@ -23,7 +23,7 @@
   }
 }
 /**
- * 祖母绿的按钮
+ * 蓝色的按钮
  */
 .bp-btn-primary {
   color: @btn-font-color;
@@ -33,6 +33,9 @@
     color: @btn-font-color;
     background-color: @btn-primary-hover-bg-color;
     // border-color: @btn-primary-hover-border-color;
+  }
+  &:focus {
+    color: @btn-font-color;
   }
 }
 .bp-btn-primary[disabled] {
