--- a/src/tables.less
+++ b/src/tables.less
@@ -1,4 +1,4 @@
-.table-hover {
+table.table-hover {
   tbody {
     tr {
       &:hover {
@@ -7,3 +7,26 @@
     }
   }
 } 
+
+// 分页组件的位置
+.ng-table-pager {
+  text-align: right;
+  .pagination {
+    margin: 0px;
+    li {
+      a {
+        color: @primary-color;
+      }
+      &.active {
+        a {
+          background-color: @primary-color;
+          border-color: @primary-color;
+          color: @table-page-font-color;
+        }
+      }
+    }
+  }
+  .ng-table-counts {
+    margin-left: 15px;
+  }
+}
