--- a/src/variables.less
+++ b/src/variables.less
@@ -50,6 +50,7 @@
 // table
 // @ffan-table-bg-accent:              #f4f6f9;
 @table-hover-bg-color:              #f1f1f1;
+@table-page-font-color:             #FFF;
 
 // form
 // 内阴影
