--- a/src/tables.less
+++ b/src/tables.less
@@ -10,7 +10,7 @@ table.table-hover {
 
 // 分页组件的位置
 .ng-table-pager {
-  text-align: right;
+  float: right;
   .pagination {
     margin: 0px;
     li {
