弹窗微调 readme完善

--- a/src/common.less
+++ b/src/common.less
@@ -24,3 +24,8 @@ html, body{
   box-shadow: 0 1px 1px @basic-container-shadow-color;
   background-color: @basic-container-bg-color;
 }
+
+// 基本容器内容居中
+.bp-container-center {
+  text-align: center;
+}
