--- a/src/form.less
+++ b/src/form.less
@@ -19,16 +19,24 @@ select.form-control{
   }
 }
 
+// 减小 label 与 input 之间的空隙
 .input-padding-left {
   padding-left: 0px;
 }
 
+// 对时间组件 label 的细微调整
+.label-margin-left {
+  margin-left: -5px;
+}
+
+// 有效期的 “至” 居中
 .form-horizontal {
   .control-label.date-font-center {
     text-align: center;
   }
 }
 
+// tab 切换
 .nav-pills {
   li {
     a {
