--- a/src/theme.less
+++ b/src/theme.less
@@ -9,5 +9,6 @@
 @import "layout.less";
 @import "pageTitle.less";
 @import "form.less";
+@import "select.less";
 @import "dropdown.less";
 @import "modal.less";
