样式抽离 和 举例

--- a/src/common.less
+++ b/src/common.less
@@ -29,3 +29,9 @@ html, body{
 .bp-container-center {
   text-align: center;
 }
+
+pre {
+  color: #EEE;
+  background: #444;
+  margin-bottom: 20px;
+}
