--- a/src/variables.less
+++ b/src/variables.less
@@ -84,3 +84,10 @@
 @page-title-font-color:             #464646;
 @page-title-border-color:           #ddd;
 @page-title-bg-color:               #FFF;
+
+//progressbars color
+@progress-success-color:            #a2d19e;
+@progress-info-color:               #80b1cb;
+@progress-warning-color:            #e8b769;
+@progress-danger-color:             #d57d6d;
+@progress-default-color:            #06c5ac;
