添加展示样式

--- a/src/panels.less
+++ b/src/panels.less
@@ -29,6 +29,12 @@
       background-color: @panel-footer-bg-color;
       padding: 10px @panel-padding;
       text-align: right;
+      &.bp-panel-btn-center {
+        text-align: center;
+      }
+      &.bp-panel-btn-left {
+        text-align: left;
+      }
     }
   }
   &.bp-panel-danger {
