提交model说明文档以及添加form表单less及样式

--- a/src/form.less
+++ b/src/form.less
@@ -35,6 +35,25 @@ select.form-control {
   }
 }
 
+//输入框为线
+.underline {
+  background: none !important;
+  background-image: none;
+  border: 1px solid #c8c7cc;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-radius: 0 0 0 0 !important;
+  color: #5b5b60;
+  font-family: inherit;
+  font-size: 14px;
+  line-height: 1.2;
+  padding: 5px 4px;
+  transition-duration: 0.1s;
+  box-shadow: none !important;
+  transition: border 300ms ease-out
+}
+
 // tab 切换
 .nav-pills {
   li {
