--- a/src/variables.less
+++ b/src/variables.less
@@ -53,6 +53,12 @@
 @table-page-font-color:             #FFF;
 
 // form
+@form-color:                       #fff;
+@form-border-df-color:             #DDD;
+@form-border-cl-color:             #50a5d6;
+@form-cl-color:                    #58b4e9;
+@form-border-color:                #666666;
+
 // 内阴影
 @form-element-inset-shadow-color:   rgba(0,0,0,.075);
 // 外阴影
