--- a/src/variables.less
+++ b/src/variables.less
@@ -54,7 +54,9 @@
 // table
 // @ffan-table-bg-accent:              #f4f6f9;
 @table-hover-bg-color:              #f1f1f1;
-@table-page-font-color:             #FFF;
+@table-page-font-color:             #1b60af;
+@table-page-bg-color:               #eee;
+@table-page-border-color:           #ddd;
 @table-bg-color:                    #FFF;
 
 // form
