add panel variable

--- a/src/common.less
+++ b/src/common.less
@@ -30,8 +30,12 @@ html, body{
   text-align: center;
 }
 
-pre {
-  color: #EEE;
-  background: #444;
+.code-container {
+  margin-top: 10px;
   margin-bottom: 20px;
+  pre {
+    color: #EEE;
+    background: #444;
+    margin-bottom: 20px;
+  }
 }
