--- a/src/form.less
+++ b/src/form.less
@@ -33,6 +33,13 @@ select.form-control {
   .control-label.date-font-center {
     text-align: center;
   }
+  .form-item {
+    padding: 20px 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    border-bottom: 1px solid #EEEEEE;
+  }
 }
 
 //输入框为线
