--- a/src/panels.less
+++ b/src/panels.less
@@ -18,8 +18,9 @@
       border-top-right-radius: 4px;
       border-top-left-radius: 4px;
       .panel-title {
+        height: @panel-header-title-height;
         font-weight: @panel-header-title-weight;
-        font-size: 16px;
+        font-size: @panel-header-title-fontsize;
       }
     }
     .panel-body {
