--- a/src/variables.less
+++ b/src/variables.less
@@ -42,9 +42,11 @@
 
 // panel
 @panel-border-radius:                       @basic-container-border-radius;
-@panel-bg-color:                          #FFF;
-@panel-header-text-color:                 #FFF;
+@panel-bg-color:                            #FFF;
+@panel-header-text-color:                   #FFF;
 @panel-header-title-weight:                 300;
+@panel-header-title-fontsize:               16px;
+@panel-header-title-height:                 @panel-header-title-fontsize * 1.375;
 @panel-heading-border-top-right-radius:     4px;
 @panel-heading-border-top-left-radius:      4px;
 @panel-padding:                             @basic-container-padding;
