import custom bootstrap file

--- a/src/theme.less
+++ b/src/theme.less
@@ -1,4 +1,5 @@
-@import "../node_modules/bootstrap/less/bootstrap.less";
+// @import "../node_modules/bootstrap/less/bootstrap.less";
+@import (inline) "../node_modules/ffan-bootstrap/dist/bootstrap.css";
 @import "variables.less";
 @import "header.less";
 @import "menu.less";
